[tool.poetry]
name = "cluwords"
version = "0.1.0"
description = "CluWords module"
authors = ["Felipe Viegas <feliperviegas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
hnswlib = "^0.7.0"
numpy = "^1.26.1"
scipy = "^1.11.3"
spacy = "^3.7.2"
gensim = "^4.3.2"
spacymoji = "^3.1.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
